# gen/http/committee_service/server/server.go
@@ -59,6 +59,7 @@ type Server struct {
 	GetCommitteeDocument      http.Handler
 	DownloadCommitteeDocument http.Handler
 	DeleteCommitteeDocument   http.Handler
+	GetCurrentWeeklyBrief     http.Handler
 	GenHTTPOpenapiJSON        http.Handler
 	GenHTTPOpenapiYaml        http.Handler
 	GenHTTPOpenapi3JSON       http.Handler
@@ -153,6 +154,7 @@ func New(
 			{"GetCommitteeDocument", "GET", "/committees/{uid}/documents/{document_uid}"},
 			{"DownloadCommitteeDocument", "GET", "/committees/{uid}/documents/{document_uid}/download"},
 			{"DeleteCommitteeDocument", "DELETE", "/committees/{uid}/documents/{document_uid}"},
+			{"GetCurrentWeeklyBrief", "GET", "/committees/{uid}/weekly-briefs/current"},
 			{"Serve gen/http/openapi.json", "GET", "/_committees/openapi.json"},
 			{"Serve gen/http/openapi.yaml", "GET", "/_committees/openapi.yaml"},
 			{"Serve gen/http/openapi3.json", "GET", "/_committees/openapi3.json"},
@@ -193,6 +195,7 @@ func New(
 		GetCommitteeDocument:      NewGetCommitteeDocumentHandler(e.GetCommitteeDocument, mux, decoder, encoder, errhandler, formatter),
 		DownloadCommitteeDocument: NewDownloadCommitteeDocumentHandler(e.DownloadCommitteeDocument, mux, decoder, encoder, errhandler, formatter),
 		DeleteCommitteeDocument:   NewDeleteCommitteeDocumentHandler(e.DeleteCommitteeDocument, mux, decoder, encoder, errhandler, formatter),
+		GetCurrentWeeklyBrief:     NewGetCurrentWeeklyBriefHandler(e.GetCurrentWeeklyBrief, mux, decoder, encoder, errhandler, formatter),
 		GenHTTPOpenapiJSON:        http.FileServer(fileSystemGenHTTPOpenapiJSON),
 		GenHTTPOpenapiYaml:        http.FileServer(fileSystemGenHTTPOpenapiYaml),
 		GenHTTPOpenapi3JSON:       http.FileServer(fileSystemGenHTTPOpenapi3JSON),
@@ -240,6 +243,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.GetCommitteeDocument = m(s.GetCommitteeDocument)
 	s.DownloadCommitteeDocument = m(s.DownloadCommitteeDocument)
 	s.DeleteCommitteeDocument = m(s.DeleteCommitteeDocument)
+	s.GetCurrentWeeklyBrief = m(s.GetCurrentWeeklyBrief)
 }
 
 // MethodNames returns the methods served.
@@ -282,6 +286,7 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountGetCommitteeDocumentHandler(mux, h.GetCommitteeDocument)
 	MountDownloadCommitteeDocumentHandler(mux, h.DownloadCommitteeDocument)
 	MountDeleteCommitteeDocumentHandler(mux, h.DeleteCommitteeDocument)
+	MountGetCurrentWeeklyBriefHandler(mux, h.GetCurrentWeeklyBrief)
 	MountGenHTTPOpenapiJSON(mux, http.StripPrefix("/_committees", h.GenHTTPOpenapiJSON))
 	MountGenHTTPOpenapiYaml(mux, http.StripPrefix("/_committees", h.GenHTTPOpenapiYaml))
 	MountGenHTTPOpenapi3JSON(mux, http.StripPrefix("/_committees", h.GenHTTPOpenapi3JSON))
@@ -2171,6 +2176,60 @@ func NewDeleteCommitteeDocumentHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "delete-committee-document")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "committee-service")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			if errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+		}
+	})
+}
+
+// MountGetCurrentWeeklyBriefHandler configures the mux to serve the
+// "committee-service" service "get-current-weekly-brief" endpoint.
+func MountGetCurrentWeeklyBriefHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/committees/{uid}/weekly-briefs/current", f)
+}
+
+// NewGetCurrentWeeklyBriefHandler creates a HTTP handler which loads the HTTP
+// request and calls the "committee-service" service "get-current-weekly-brief"
+// endpoint.
+func NewGetCurrentWeeklyBriefHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeGetCurrentWeeklyBriefRequest(mux, decoder)
+		encodeResponse = EncodeGetCurrentWeeklyBriefResponse(encoder)
+		encodeError    = EncodeGetCurrentWeeklyBriefError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "get-current-weekly-brief")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "committee-service")
 		payload, err := decodeRequest(r)
 		if err != nil {
